# CPPMicroProj-Agriculture

./: README.md  TODO.md
CardProject/: CMakeLists.txt
CardProject/resources/: cardsdefinition.xml  levelsdefinition.xml  levelstest.xml
CardProject/src/core/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Card.h  CardFactory.cpp  CardFactory.h  Dice.cpp  Dice.h  GameApp.cpp  GameApp.h  GameManager.cpp  GameManager.h  Level.cpp  Level.h  LevelFactory.cpp  LevelFactory.h  Renderer.cpp  Renderer.h  ResourceCard.cpp  ResourceCard.h
CardProject/src/main/: CMakeLists.txt  main.cpp
CardProject/src/test/: CMakeLists.txt  unitTests.cpp
